# acpterm

./: .gitignore  AGENTS.md  GEMINI.md  README.md  TODO.md  justfile  main.py  pyproject.toml
demos/: elicitation_demo.py  eval_harness.sh
skills/llm_judge/: SKILL.md
src/acpterm/: acp_agent.py  agent.py  agent_cache.py  cli.py  config.py  elicitation.py  output.py  session_store.py  transcript.py
