[project]
name = "acpterm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agent-client-protocol>=0.11.0",
    "pydantic>=2.0.0",
    "rich>=15.0.0",
    "typer>=0.27.0",
]

[build-system]
requires = ["uv_build>=0.11.29,<0.12"]
build-backend = "uv_build"

[project.scripts]
acpterm = "acpterm.cli:main"
