[project]
name = "acpterm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agent-client-protocol>=0.11.0",
    "pydantic>=2.0.0",
    "rich>=15.0.0",
    "typer>=0.27.0",
]

[build-system]
requires = ["uv_build>=0.11.29,<0.12"]
build-backend = "uv_build"

[project.scripts]
acpterm = "acpterm.cli:main"

[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "RUF", # ruff-specific rules
    "S",   # flake-bandit
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without strict argument
    "E501",  # line too long (handled by line-length)
    "F401",  # unused import (for __init__.py)
    "RUF012", # mutable class defaults
]
unfixable = [
    "F401",  # unused import
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["acp_client"]
lines-after-imports = 2
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true
order-by-type = false

[tool.ruff.format]
quote-style = "double"
